--- a/src/app/system/bill-page/bill-page.component.html
+++ b/src/app/system/bill-page/bill-page.component.html
@@ -3,14 +3,15 @@
     Страница счета <span class="sparkline bar"></span>
   </h3>
   <div class="pull-right">
-    <button class="btn-sm btn btn-primary-outline">
+    <button class="btn-sm btn btn-primary-outline" (click)="onRefresh()">
       <i class="fa fa-refresh"></i>
     </button>
   </div>
 </div>
 <section class="section">
-  <div class="row">
-    <csw-bill-card></csw-bill-card>
-    <csw-currency-card></csw-currency-card>
+  <div *ngIf="!isLoaded" class="row text-center">Loading...</div>
+  <div *ngIf="isLoaded" class="row">
+    <csw-bill-card [bill]="bill" [currency]="currency"></csw-bill-card>
+    <csw-currency-card [currency]="currency"></csw-currency-card>
   </div>
 </section>
