--- a/src/app/system/records-page/records-page.component.html
+++ b/src/app/system/records-page/records-page.component.html
@@ -10,7 +10,7 @@
       <csw-add-event></csw-add-event>
     </div>
     <div class="col-md-6">
-      <csw-add-category></csw-add-category>
+      <csw-add-category (onCategoryAdded)="newCategory($event)"></csw-add-category>
     </div>
   </div>
   <div class="row">
