--- a/src/app/system/records-page/add-category/add-category.component.html
+++ b/src/app/system/records-page/add-category/add-category.component.html
@@ -5,18 +5,52 @@
     </div>
   </div>
   <div class="card-block">
-    <form>
-      <div class="form-group has-error">
+    <form #f="ngForm" (submit)="onSubmit(f)">
+      <div
+        class="form-group"
+        [ngClass]="{'has-error': name.invalid && name.touched}"
+      >
         <label class="control-label" for="category-name">Введите название</label>
-        <input type="text" id="category-name" class="form-control">
-        <span class="form-help-text">Валидация ошибка</span>
+        <input
+          type="text"
+          id="category-name"
+          class="form-control"
+          #name="ngModel"
+          name="name"
+          [ngModel]=""
+          required
+        >
+        <span
+          *ngIf="name.invalid && name.touched"
+          class="form-help-text"
+        >Название не должно быть пустым!</span>
       </div>
-      <div class="form-group has-success">
+      <div
+        [ngClass]="{'has-error': capacity.invalid && capacity.touched}"
+        class="form-group"
+      >
         <label class="control-label" for="category-value">Введите лимит</label>
-        <input type="number" value="0" id="category-value" class="form-control">
-        <span class="form-help-text">Валидация нет ошибки</span>
+        <input
+          type="number"
+          value="0"
+          id="category-value"
+          class="form-control"
+          #capacity="ngModel"
+          name="capacity"
+          [ngModel]="1"
+          min="1"
+        >
+        <span
+          *ngIf="capacity.invalid && capacity.touched"
+          class="form-help-text"
+        >Введите корретное число!</span>
       </div>
-      <button type="submit" class="btn btn-primary">Добавить</button>
+      <button
+        type="submit"
+        class="btn btn-primary"
+        [disabled]="f.invalid"
+      >Добавить
+      </button>
     </form>
   </div>
 </div>
