--- a/src/app/system/records-page/records-page.component.html
+++ b/src/app/system/records-page/records-page.component.html
@@ -3,8 +3,10 @@
     Страница записей <span class="sparkline bar"></span>
   </h3>
 </div>
-
-<section class="section">
+<section class="section text-center" *ngIf="!isLoaded">
+  Loading...
+</section>
+<section class="section" *ngIf="isLoaded">
   <div class="row">
     <div class="col-md-6">
       <csw-add-event></csw-add-event>
@@ -15,7 +17,7 @@
   </div>
   <div class="row">
     <div class="col-md-6">
-      <csw-edit-category></csw-edit-category>
+      <csw-edit-category [categories]="categories" (onCategoryChanged)="updateCategory($event)"></csw-edit-category>
     </div>
   </div>
 </section>
