--- a/src/app/system/records-page/edit-category/edit-category.component.html
+++ b/src/app/system/records-page/edit-category/edit-category.component.html
@@ -1,22 +1,74 @@
 <div class="card">
   <div class="card-header bordered">
     <div class="header-block">
-      <h3 class="title">Добавить категорию</h3>
+      <h3 class="title">Редактировать категорию</h3>
     </div>
   </div>
   <div class="card-block">
-    <form>
-      <div class="form-group has-error">
-        <label class="control-label" for="category-name">Введите название</label>
-        <input type="text" id="category-name" class="form-control">
-        <span class="form-help-text">Валидация ошибка</span>
+    <form #f="ngForm" (submit)="onSubmit(f)">
+      <div
+        class="form-group"
+      >
+        <label class="control-label" for="category">Выберите категорию</label>
+        <select
+          class="form-control"
+          id="category"
+          [(ngModel)]="categoryCurrentId"
+          [ngModelOptions]="{standalone: true}"
+          (change)="changeCategory()"
+        >
+          <option [value]="c.id"
+                  *ngFor="let c of categories"
+          >
+            {{ c.name }}
+          </option>
+        </select>
       </div>
-      <div class="form-group has-success">
-        <label class="control-label" for="category-value">Введите лимит</label>
-        <input type="number" value="0" id="category-value" class="form-control">
-        <span class="form-help-text">Валидация нет ошибки</span>
+      <div
+        class="form-group"
+        [ngClass]="{'has-error': name.invalid && name.touched}"
+      >
+        <label class="control-label" for="category-name">Название:</label>
+        <input
+          type="text"
+          id="category-name"
+          class="form-control"
+          #name="ngModel"
+          name="name"
+          [ngModel]="categoryCurrent.name"
+          required
+        >
+        <span
+          *ngIf="name.invalid && name.touched"
+          class="form-help-text"
+        >Название не должно быть пустым!</span>
       </div>
-      <button type="submit" class="btn btn-primary">Добавить</button>
+      <div
+        [ngClass]="{'has-error': capacity.invalid && capacity.touched}"
+        class="form-group"
+      >
+        <label class="control-label" for="category-value">Лимит:</label>
+        <input
+          type="number"
+          value="0"
+          id="category-value"
+          class="form-control"
+          #capacity="ngModel"
+          name="capacity"
+          [ngModel]="categoryCurrent.capacity"
+          min="1"
+        >
+        <span
+          *ngIf="capacity.invalid && capacity.touched"
+          class="form-help-text"
+        >Введите корретное число!</span>
+      </div>
+      <button
+        type="submit"
+        class="btn btn-primary"
+        [disabled]="f.invalid"
+      >Изменить
+      </button>
     </form>
   </div>
 </div>
