--- a/src/app/system/records-page/add-event/add-event.component.html
+++ b/src/app/system/records-page/add-event/add-event.component.html
@@ -5,34 +5,80 @@
     </div>
   </div>
   <div class="card-block">
-    <form>
+    <form #f="ngForm" (submit)="onSubmit(f)">
       <div class="form-group">
         <label class="control-label" for="category">Выберите категорию</label>
-        <select class="form-control" id="category">
-          <option>Option one</option>
-          <option>Option two</option>
-          <option>Option three</option>
-          <option>Option four</option>
+        <select
+          class="form-control"
+          id="category"
+          name="category"
+          #category="ngModel"
+          [ngModel]="1"
+        >
+          <option
+            *ngFor="let c of categories"
+            [value]="c.id"
+          >
+            {{ c.name }}
+          </option>
         </select>
       </div>
       <div class="form-group">
         <label class="control-label">Выберите тип</label>
-        <div>
+        <div *ngFor="let type of typesEvents">
           <label>
-            <input class="radio" name="radios" type="radio">
-            <span>Доход</span>
-          </label>
-        </div>
-        <div>
-          <label>
-            <input class="radio" name="radios" type="radio" checked>
-            <span>Расход</span>
+            <input
+              class="radio"
+              name="type"
+              type="radio"
+              required
+              [value]="type.type"
+              [ngModel]="'outcome'"
+            >
+            <span>{{ type.label }}</span>
           </label>
         </div>
       </div>
-      <div class="form-group">
+      <div
+        class="form-group"
+        [ngClass]="{'has-error': amount.invalid && amount.touched}"
+      >
         <label class="control-label" for="amount">Введите сумму</label>
-        <input type="number" value="0" id="amount" class="form-control">
+        <input
+          type="number"
+          value="0"
+          id="amount"
+          class="form-control"
+          #amount="ngModel"
+          name="amount"
+          ngModel="1"
+          min="1"
+          required
+        >
+        <span
+          *ngIf="amount.invalid && amount.touched"
+          class="form-help-text"
+        >Введите корректную сумму!</span>
+      </div>
+      <div
+        class="form-group"
+        [ngClass]="{'has-error': description.invalid && description.touched}"
+      >
+        <label class="control-label" for="description">Введите описание</label>
+        <input
+          type="text"
+          value="0"
+          id="description"
+          class="form-control"
+          #description="ngModel"
+          name="description"
+          ngModel
+          required
+        >
+        <span
+          *ngIf="description.invalid && description.touched"
+          class="form-help-text"
+        >Описание не должно быть пустым!</span>
       </div>
       <button type="submit" class="btn btn-primary">Добавить</button>
     </form>
