--- a/src/app/system/records-page/records-page.component.html
+++ b/src/app/system/records-page/records-page.component.html
@@ -9,7 +9,7 @@
 <section class="section" *ngIf="isLoaded">
   <div class="row">
     <div class="col-md-6">
-      <csw-add-event></csw-add-event>
+      <csw-add-event [categories]="categories"></csw-add-event>
     </div>
     <div class="col-md-6">
       <csw-add-category (onCategoryAdded)="newCategory($event)"></csw-add-category>
