--- a/src/app/system/planning-page/planning-page.component.html
+++ b/src/app/system/planning-page/planning-page.component.html
@@ -3,7 +3,7 @@
     Страница планирования <span class="sparkline bar"></span>
   </h3>
 </div>
-<section class="section">
+<section class="section" *ngIf="isLoaded">
   <div class="row">
     <div class="col-md-12">
       <div class="card">
@@ -12,29 +12,29 @@
             <h3 class="title">Расходы</h3>
           </div>
           <h5 class="planning-expenses pull-right">
-            Общий остаток: <span class="text-success">78 999.21 Р</span>
+            Общий остаток: <span class="text-success">{{ bill.value | number:'1.2'}}</span>
           </h5>
         </div>
-        <div class="card-block">
+        <div class="card-block" *ngFor="let c of categories">
           <div class="row">
             <div class="col-xs-6">
               <div class="n-progress">
-                <div class="progress-bar success" style="width: 30%;">
-                  <span>Название категории</span>
+                <div class="progress-bar {{ getCatColor(c) }}" [ngStyle]="{'width': getCatPercent(c)}">
+                  <span> {{ c.name }}</span>
                 </div>
               </div>
             </div>
             <div class="col-xs-6">
               <p>
-                <span class="text-success">300.00</span>
+                <span class="text-{{ getCatColor(c) }}">{{ getCategoryCost(c) | number:'1.2'}}</span>
                 из
-                <span class="text-primary">1000.00</span>
+                <span class="text-primary">{{ c.capacity | number:'1.2' }}</span>
                 |
-                осталось <span class="text-success">700.00</span> (руб.)
+                осталось <span class="text-{{ getCatColor(c) }}">{{ c.capacity - getCategoryCost(c) | number:'1.2' }}</span> (руб.)
               </p>
             </div>
           </div>
-          <div class="row">
+<!--          <div class="row">
             <div class="col-xs-6">
               <div class="n-progress">
                 <div class="progress-bar warning" style="width: 60%;">
@@ -69,9 +69,10 @@
                 осталось <span class="text-danger">-200.00</span> (руб.)
               </p>
             </div>
-          </div>
+          </div>-->
         </div>
       </div>
     </div>
   </div>
 </section>
+<section class="section" *ngIf="!isLoaded">Loading...</section>
