Added chart for history page

--- a/src/app/system/history-page/history-page.component.html
+++ b/src/app/system/history-page/history-page.component.html
@@ -3,9 +3,14 @@
     Страница истории <span class="sparkline bar"></span>
   </h3>
 </div>
+<div *ngIf="!isLoaded">
+  Loading...
+</div>
+<div *ngIf="isLoaded">
+  <csw-history-chart [data]="chartData"></csw-history-chart>
 
-<csw-history-chart></csw-history-chart>
+  <csw-history-events></csw-history-events>
 
-<csw-history-events></csw-history-events>
+  <csw-history-filter></csw-history-filter>
+</div>
 
-<csw-history-filter></csw-history-filter>
