--- a/src/app/system/history-page/history-chart/history-chart.component.html
+++ b/src/app/system/history-page/history-chart/history-chart.component.html
@@ -1,6 +1,6 @@
 <section class="section">
   <div class="row">
-    <div class="col-xs-12 chart-center">
+    <div class="col-xs-12 chart-center text-center">
       <ngx-charts-pie-chart
         [view]="[545,345]"
         [results]="data"
