--- a/src/app/system/history-page/history-events/history-events.component.html
+++ b/src/app/system/history-page/history-events/history-events.component.html
@@ -37,28 +37,17 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
-              <th scope="row">1</th>
-              <td>44 444</td>
-              <td>12.12.2017</td>
-              <td>Товары</td>
+            <tr *ngFor="let e of events; let idx = index;">
+              <th scope="row">{{ idx+1 }}</th>
+              <td>{{ e.amount }}</td>
+              <td>{{ e.date | cswMoment:'DD.MM.YYYY HH:mm:ss' }}</td>
+              <td> {{ getCategoryName(e) }}</td>
               <td>
-                <span class="label label-danger">Расход</span>
+                <span class="label {{e.type === 'outcome' ? 'label-danger' : 'label-success'}}" *ngIf="e.type === 'outcome'">Расход</span>
+                <span class="label {{e.type === 'outcome' ? 'label-danger' : 'label-success'}}" *ngIf="e.type === 'income'">Доход</span>
               </td>
               <td class="text-lg-center">
-                <a href="#" class="btn btn-primary-outline">Открыть</a>
-              </td>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-              <td>33 333</td>
-              <td>12.12.2017</td>
-              <td>Отдых</td>
-              <td>
-                <span class="label label-success">Доход</span>
-              </td>
-              <td class="text-lg-center">
-                <a href="#" class="btn btn-primary-outline">Открыть</a>
+                <a [routerLink]="['system/history', e.id]" class="btn btn-primary-outline">Открыть</a>
               </td>
             </tr>
             </tbody>
