--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,6 @@
 <p class="text-xs-center">Войдите для работы</p>
 <div
+  @fade
   class="alert alert-{{ message.type }}"
   *ngIf="message.text"
 >
