--- a/UI/src/app/system/shared/components/header/header.component.html
+++ b/UI/src/app/system/shared/components/header/header.component.html
@@ -7,7 +7,7 @@
       <li class="profile dropdown" cswDropdown>
         <a class="nav-link dropdown-toggle" role="button">
           <span class="name">
-            Здравствуйте, {{ user.name }}
+            Здравствуйте, {{ username }}
           </span>
         </a>
         <div class="dropdown-menu profile-dropdown-menu">
